<resources>
    <string name="app_name">HTTP Request</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="remove_link">remove</string>
    <string name="process">process</string>
    <string name="add_parameters">param</string>
    <string name="more">more</string>
    <string name="less">less</string>
    <string name="request_name_hint">request name</string>
    <string name="url_hint">http(s)://</string>
    <string name="param_hint">parameter</string>
    <string name="value_hint">value</string>
    <string name="json_checkbox">json</string>
    <string name="referer_hint">referer</string>
    <string name="mime_hint">mime type (ex: application/json)</string>
    <string name="login_hint">login</string>
    <string name="password_hint">password</string>
    <string name="mime_hint_short">mime</string>
    <string name="error">error</string>
    <string name="save">save</string>
    <string name="request_save">Requests saved</string>
    <string name="saved_requests_loaded">saved requests loaded</string>
    <string name="json_error">Json error</string>
    <string name="read_file_error">Read file error</string>
    <string name="save_file_error">Save file error</string>
    <string name="back_button_to_exit">Tap back button in order to exit</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="loading">Loading...</string>
    <string-array name="http_verbs">
        <item>GET</item>
        <item>POST</item>
        <item>HEAD</item>
        <item>OPTIONS</item>
        <item>PUT</item>
        <item>DELETE</item>
        <item>TRACE</item>
        <item>PATCH</item>
    </string-array>
    <string name="play_mauriacus_game"><a href="https://mauriacus.com">Play MAURIACUS game</a></string>
    <string name="link_facebook"><a href="https://www.facebook.com/HTTP-request-106209834558895/">Facebook</a></string>
    <string name="link_email"><a href="mailto:hicode.sas@gmail.com?subject=HTTP Request">Send email</a></string>
</resources>
