<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--
            Set focus on LinearLayout prevent auto-focus on EditText
        -->
        <LinearLayout
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@color/greyLight"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/mainLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:text=""
                        android:id="@+id/urlEditText"
                        android:theme="@style/whiteTheme"
                        android:hint="@string/url_hint"
                        android:singleLine="true"
                        android:layout_weight="8"
                        android:layout_width="0dp"
                        android:inputType="textUri"
                        android:layout_height="wrap_content" />
                    <Spinner
                        android:id="@+id/verbSelect"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        />

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/refererEditText"
                        android:theme="@style/whiteTheme"
                        android:hint="@string/referer_hint"
                        android:singleLine="true"
                        android:layout_weight="8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <CheckBox
                        android:text="@string/json_checkbox"
                        android:theme="@style/whiteTheme"
                        android:id="@+id/jsonCheckBox"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />


                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/addParamButton"
                        android:layout_weight="4"
                        android:text="@string/add_parameters"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/saveButton"
                        android:layout_weight="4"
                        android:text="@string/save"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <Button
                        android:id="@+id/processButton"
                        android:layout_weight="6"
                        android:text="@string/process"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/parametersLayout"
                    android:theme="@style/whiteTheme"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </LinearLayout>
                <!--
                <com.docm.httprequest.object.ParamValueObject
                    app:param="Tparam"
                    app:value="Tvalue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.docm.httprequest.object.ParamValueObject>
                -->
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <android.support.design.widget.AppBarLayout
                        android:theme="@style/AppTheme.AppBarOverlay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <android.support.design.widget.TabLayout
                            android:id="@+id/tab_layout"
                            app:tabMode="fixed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_scrollFlags="scroll|enterAlways" />
                    </android.support.design.widget.AppBarLayout>

                    <com.docm.httprequest.model.WrappingViewPager
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:id="@+id/view_pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
